[package]
name = "mp4parse_fallible"
version = "0.0.3"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"

description = "Fallible replacement for Vec"
documentation = "https://docs.rs/mp4parse_fallible/"
repository = "https://github.com/mozilla/mp4parse_fallible"

[badges]
travis-ci = { repository = "https://github.com/mozilla/mp4parse_fallible" }

[lib]
name = "mp4parse_fallible"
path = "lib.rs"
